<resources>
    <string name="app_name">CemeteryTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">newUser@gmail.com</string>
    <string name="create_username">Create username</string>
    <string name="enter_you_password_hint">Create password</string>
    <string name="sign_up">sign up</string>
    <string name="log_in_btn">log in</string>
    <string name="enter_you_username">Enter your username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cemeteries_you_have_added">Cemeteries you have added</string>
    <string name="all_cemeteries">All Cemeteries</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name_hint">Enter cemetery name</string>
    <string name="location_hint">Enter location</string>
    <string name="state_hint">Enter state</string>
    <string name="county_hint">Enter county</string>
    <string name="township_hint">Enter township</string>
    <string name="rang_hint">Enter range</string>
    <string name="section_hint">Enter section</string>
    <string name="firstyear_hint">Enter first year</string>
    <string name="spot_hint">Enter spot</string>
    <string name="established">"Established: "</string>
    <string name="location">location</string>
    <string name="add">add</string>
    <string name="section">Section: </string>
    <string name="spot">Spot: </string>
    <string name="range">Range: </string>
    <string name="state">State: </string>
    <string name="county">County: </string>
    <string name="township">Township: </string>
    <string name="first">Enter first name</string>
    <string name="last">Enter last name</string>
    <string name="birth_date">Birth date: </string>
    <string name="death_date">Death date: </string>
    <string name="married">Enter marriage year</string>
    <string name="grave_number">Enter grave number</string>
    <string name="comment">Enter comment</string>
    <string name="delete">delete</string>
    <string name="send">send</string>
    <string name="edit">edit</string>
    <string name="marriage_year">Marriage year:</string>
    <string name="comment_title">Comment:</string>
    <string name="grave_number_title">Grave number:</string>

    <string name="map_chooser_title">Maps</string>
</resources>