<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.cemeterytracker.ui.addedit.grave.AddEditGraveViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="Grave"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            app:layout_anchor="@id/toolbarLayout"
            app:layout_anchorGravity="bottom"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:elevation="6dp"
            app:cardCornerRadius="8dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstnNameInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:hint="@string/first"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstNameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:setEtGraveFirstName="@{viewModel.graveToEdit}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:hint="@string/last"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/firstnNameInputLayout"
                        app:layout_constraintTop_toBottomOf="@id/firstnNameInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastNameet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:setEtGraveLast="@{viewModel.graveToEdit}" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/birthYearInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:hint="@string/birth_date"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lastNameInputLayout"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bornEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:setEtGraveBirth="@{viewModel.graveToEdit}" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/deathYearInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:hint="@string/death_date"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/birthYearInputLayout"
                        app:layout_constraintTop_toBottomOf="@id/birthYearInputLayout"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/deathYearEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:setEtGraveDeath="@{viewModel.graveToEdit}" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/marriageYearInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:hint="@string/married"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/graveNumInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/deathYearInputLayout"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/marriageYearEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:setEtGraveMarried="@{viewModel.graveToEdit}" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/graveNumInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:hint="@string/grave_number"
                        app:hintEnabled="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/deathYearInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/graveNumEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:setEtGraveNum="@{viewModel.graveToEdit}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/commentInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/comment"
                        app:hintEnabled="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/graveNumInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/commentEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:setEtGraveComment="@{viewModel.graveToEdit}" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/createGraveFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_baseline_add_24_white"
            android:layout_marginEnd="32dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>






